<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/moby_playpea"
            android:text="@string/alc_4_phase_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorWhite" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/moby_playpea"
            android:text="@string/welcome_to_alc_4_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">


            <Button
                android:id="@+id/about_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="18dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/moby_playpea"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/about_alc"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="18dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/moby_playpea"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/my_profile"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

           </LinearLayout>
    </RelativeLayout>

</LinearLayout>